deixando apenas um botão

--- a/Mini Projetos/Lâmpada - Acende e Desliga/index.html
+++ b/Mini Projetos/Lâmpada - Acende e Desliga/index.html
@@ -17,8 +17,7 @@
             <img src="./img/desligada.jpg" alt="Lâmpada" id="lamp">
         </div>
         <div>
-            <button id='turnOn'>Ligar</button>
-            <button id='turnOff'>Desligar</button>
+            <button id='turnOnOff'>Ligar</button>
         </div>
     
     </main>
