--- a/SlideShow/index.html
+++ b/SlideShow/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
 <body>
     <div class="container-slide">
         <div class="action-button" id="previous">&laquo</div>
-        <div class="tonainer-items" id="container-items"></div>
+        <div class="container-items" id="container-items"></div>
         <div class="action-button" id="next">&raquo</div>
     </div>    
     <script src="./app.js"></script>
