Finalizado exercicios condições simples
site tu es gringo, usando condições simples em JS.

--- a/aula11 - Curso em video/ex010SITE.html
+++ b/aula11 - Curso em video/ex010SITE.html
@@ -12,9 +12,8 @@
 
     Velocidade do carro: <input type="number" name="txtvel" id="txtvel">KM/h
     <input type="button" value="Verificar" onclick="calcular()">
-    <div id="res">
-
-    </div>
+    <div id="res"></div>
+    
     <script>
         function calcular(){
             var txtv = window.document.querySelector('input#txtvel')
