play no som e click na letra ativado
utilizando metodos e eventos foi possivel dá a funcionalidade de tocar a música na div criada.

--- a/DRUMKIT/index.html
+++ b/DRUMKIT/index.html
@@ -12,9 +12,9 @@
     <main>
         <div class="title"><strong>DRUM KIT</trong></div>
         <div class="container" id="container">
-            <div class="key">A</div>
+            <!--- <div class="key">A</div>
             <div class="key">S</div>
-            <div class="key">D</div>
+            <div class="key">D</div> --->
         </div>
         
         <script src="./app.js"></script>
