--- a/Audio Recorder/index.html
+++ b/Audio Recorder/index.html
@@ -5,16 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Recorder</title>
-    <link rel="stylesheet" href="style.css">
-    </head>
+    <style type="text/css">
+        body {
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+            margin: 0;
+        }
+
+        .holder {
+            background-color: #4c474c;
+            background-image: linear-gradient(0deg, #4c474c 0%, #141414 100%);
+            border-radius: 50px;
+        }
+
+        [data-role="controls"] > button {
+            margin: 50px auto;
+            outline: none;
+            display: block;
+            border: none;
+            background-color: #D9AFD9;
+            background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            text-indent: -1000em;
+            cursor: pointer;
+            box-shadow: 0px 5px 5px 2px rgba(0,0,0,0.3) inset, 0px 0px 0px 30px #fff, 0px 0px 0px 35px #333;
+
+        }
+    
+    </style>
+</head>
+
 <body>
 
     <div class="holder">
-        <div data-role='controls'>
-            <input type="button" value="Record">
+        <div data-role="controls">
+            <button>Record</button>
         </div>
         <div data-role='recordings'></div>
     </div>
     
 </body>
+
 </html>
