finalizando projeto1 estatico html/css

--- a/Curso Origamid Js/DOM/projeto01/index.html
+++ b/Curso Origamid Js/DOM/projeto01/index.html
@@ -100,8 +100,8 @@
     </section>
 
     <section class="grid-section faq" id="faq">
-        <h1>FAQ</h1>
-        <dl>
+        <h1 class="titulo">FAQ</h1>
+        <dl class="faq-lista">
             <dt>Qual a idade dos aniamis?</dt>
             <dd>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio voluptatum eligendi blanditiis amet est voluptatibus molestiae cumque. Esse rem aspernatur ratione, quisquam obcaecati est provident!</dd>
 
@@ -115,7 +115,7 @@
     </section>
 
     <section class="grid-section contato" id="contato">
-        <h1>Contato</h1>
+        <h1 class="titulo">Contato</h1>
         <div class="mapa">
             <img src="img/mapa.png" alt="#">
         </div>
