--- a/Curso Origamid Js/DOM/projeto01/index.html
+++ b/Curso Origamid Js/DOM/projeto01/index.html
@@ -15,7 +15,7 @@
             <li><a href="#animais">Animais</a></li>
             <li><a href="#faq">Faq</a></li>
             <li><a href="#contato">Contato</a></li>
-            <li><a href="#site">dev → </a></li>
+            <li><a href="#copy">dev → </a></li>
         </ul>
     </nav>
 
@@ -127,7 +127,7 @@
         </ul>
     </section>
 
-    <footer class="copy">
+    <footer class="copy" id="copy">
         <p>todos os direitos reservados.</p>
     </footer>
 
