--- a/Curso Origamid Js/React Add/index.html
+++ b/Curso Origamid Js/React Add/index.html
@@ -10,12 +10,12 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
 
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
 </head>
 <body>
     <div id="app"></div>
 
     <script type="text/babel">
-
         const Compras = () => {
             const [contador, setContador] = React.useState(0);
             console.log(contador);
@@ -24,7 +24,7 @@
             }
 
             return (
-                <div>
+                <div> 
                     <button onClick={comprar}>Comprar</button>
                     <p>Total: {contador}</p>
                     <p>Preço: R$ {contador * 250}</p> 
@@ -57,7 +57,8 @@
             </div>
         }
 
-        ReactDOM.render(<App />, document.getElementById('app'))
+        ReactDOM.render(<App />, document.getElementById('app'));
+        
     </script>
 </body>
 </html>
