--- a/exercicios.OBC/exercicio2/index.html
+++ b/exercicios.OBC/exercicio2/index.html
@@ -23,6 +23,18 @@
             <button class="Calcular" id="Calcular" onclick="calcularVelocidades()">Calcular</button> <p id="msg"></p>
         </div>
         
+        <!-- Escreva um programa que permita inserir o nome e o poder de ataque de um personagem, depois o nome, a quantidade de pontos de vida, o poder de defesa de outro personagem e se ele possui um escudo, e então calcule a quantidade de dano causado baseado nas seguintes regras:
+
+        - Se o poder de ataque for maior do que a defesa e o defensor não possuir um escudo, o dano causado será igual a diferença entre o ataque e a defesa.
+        - Se o poder de ataque for maior do que a defesa e o defensor possuir um escudo, o dano causado será igual a metade da diferença entre o ataque e a defesa.
+        - Se o poder de ataque for menor ou igual a defesa, o dano causado será 0.
+
+        Por fim, o programa deve subtrair a quantidade de dano da quantidade de pontos de vida do personagem defensor e exibir na tela a quantidade de dano e as informações atualizadas de ambos os personagens.  -->
+
+
+        <div>
+            <h1>Calculo de Dano</h1>
+        </div>
 
 
 
