conversor de medidas
exercitando o switch no JS

--- a/exercicios.OBC/exercicio3/index.html
+++ b/exercicios.OBC/exercicio3/index.html
@@ -12,21 +12,8 @@
     <h1>Conversos de medidas</h1>
 
 
-    <script>
-        const valor = prompt("Digite um valor metros que gostaria de converter?").value;
 
-        const unidadeDeMedida = prompt( 
-            "Qual unidade de medidada deseja que esse valor seja convertido? \n - milímetro(mm) \n- centímetro (cm) \n- decímetro (dm) \n- decâmetro (dam) \n- hectômetro (hm) \n- quilômetro (km)");
-
-        unidadeDeMedida = valu
-
-        switch (unidadeDeMedida) {
-            case "mm":
-                alert()
-        }
-
-
-    </script>
+    <script src="./conversor.js"></script>
 
 </body>
 </html>
