praticando a manipulação da DOM

--- a/exercicios.OBC/DOM/exercicio2/index.html
+++ b/exercicios.OBC/DOM/exercicio2/index.html
@@ -15,10 +15,10 @@
         <input type="text" name="fullname" id="fullname">
         <br><br>
 
-        <label for="">Tecnologias</label>
+        <label>Tecnologias</label>
         <br>
         <button id="addTechBtn" type="button">Adicionar Nova</button>
-        <ul id="stackInput"></ul>
+        <ul id="stackInputs"></ul>
         <br>
         <button type="submit"> Cadastrar</button>
 
