finalizing post requests

--- a/js-topicos-avancados/requisicoes-post/index.html
+++ b/js-topicos-avancados/requisicoes-post/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main style="display: flex; gap: 4rem; margin: 1rem 2rem;">
-    <form>
+    <form action="http://localhost:3000/articles" method="post">
       <h2>Escrever um artigo</h2>
       <label for="title">Título:</label>
       <br>
